# Rust-MCP-Server

./: .gitignore  Cargo.toml  Dockerfile  README.Docker.md  README.md  prometheus.yaml  prometheus.yml
MockRepository/JavaScript/scripts/: build-eslint-docs.js  enable-feature-flag.js
MockRepository/Rust/rustc_middle/src/: arena.rs  queries.rs  thir.rs
MockRepository/Rust/rustc_middle/src/dep_graph/: dep_node.rs
MockRepository/Rust/rustc_middle/src/hooks/: mod.rs
MockRepository/Rust/rustc_middle/src/mir/: mono.rs  syntax.rs  terminator.rs
MockRepository/Rust/rustc_middle/src/mir/interpret/: allocation.rs
MockRepository/Rust/rustc_middle/src/mir/interpret/allocation/: init_mask.rs  provenance_map.rs
MockRepository/Rust/rustc_middle/src/mir/interpret/allocation/init_mask/: tests.rs
MockRepository/Rust/rustc_middle/src/thir/: visit.rs
MockRepository/Rust/rustc_middle/src/ty/: closure.rs  generic_args.rs  impls_ty.rs  instance.rs
Rust-MCP-Server/: .gitignore  Cargo.toml
Rust-MCP-Server/src/: RequestHandler.rs  RequestStats.rs  ToolService.rs  main.rs  request_handler.rs  request_stats.rs  tool_service.rs
src/: main.rs  repo_analyser.rs  request_handler.rs  request_stats.rs  tool_service.rs
