[package]
name = "rust-mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", features = ["server", "transport-io", "macros"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
schemars = "1.2.1"
walkdir = "2"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
once_cell = "1"
hyper = { version = "0.14", features = ["full"] }
threadpool = "1.8.1"
rayon = "1.11.0"
axum = "0.7"
